added nginx configuration

--- a/celery_app/Dockerfile
+++ b/celery_app/Dockerfile
@@ -8,6 +8,6 @@ COPY celery_app/requirements.txt /app/requirements.txt
 RUN pip install -r /app/requirements.txt
 
 COPY celery_app /app/celery_app
-COPY celery_app/.env /app/celery_app/.env
+COPY .env /app/.env
 
 CMD ["celery", "-A", "celery_app.tasks", "worker", "--loglevel=info"]
