--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,8 +10,10 @@ services:
     build:
       context: .
       dockerfile: src/Dockerfile
-    ports:
-      - "8000:8000"
+    volumes:
+      - ./src/frontend/static/:/static/ 
+    # ports:
+    #   - "8000:8000"
     networks:
       - app_network
     depends_on:
@@ -29,8 +31,8 @@ services:
 
   redis:
     image: redis:6-alpine
-    ports:
-      - "6379:6379"
+    # ports:
+    #   - "6379:6379"
     networks:
       - app_network
 
@@ -42,7 +44,20 @@ services:
       POSTGRES_DB: ${DB_NAME}
     volumes:
       - db_data:/var/lib/postgresql/data
-    ports:
-      - "5432:5432"
+    # ports:
+    #   - "5432:5432"
     networks:
       - app_network
+
+  
+  nginx:
+    image: nginx:alpine
+    ports:
+      - "80:80"
+    volumes:
+      - ./nginx.conf:/etc/nginx/conf.d/default.conf
+      - ./src/frontend/static/:/static/ 
+    networks:
+      - app_network
+    depends_on:
+      - web
